--- a/server/package.json
+++ b/server/package.json
@@ -12,7 +12,9 @@
   "license": "ISC",
   "devDependencies": {
     "@types/jest": "^26.0.15",
-    "eslint": "^6.6.0",
+    "eslint": "^5.16.0",
+    "eslint-loader": "^3.0.2",
+    "eslint-plugin-vue": "^5.2.3",
     "typescript": "^4.0.3"
   },
   "dependencies": {
